[tool.poetry]
name = "flint"
version = "0.1.0"
description = ""
authors = ["mrinmoy-hex <ddas38192@gmail.com>"]
readme = "README.md"
packages = [{ include = "flint" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"

[tool.poetry.scripts]
flint = "flint.flint:Flint.main"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
